# tetriz

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  a.cpp  color.h  config.cpp  config.h  control.cpp  control.h  define.h  draw.cpp  draw.h  game.cpp  game.h  main.cpp  terminal.cpp  terminal.h  tetromino.cpp  tetromino.h  utils.cpp  utils.h
tests/: config_test.cpp  control_test.cpp  game_control_test.cpp  persistence_config_test.cpp  rules_test.cpp
